k8s/whispr/preprod/messaging-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: messaging-service
  namespace: whispr-preprod
spec:
  type: NodePort
  selector:
    app: messaging-service
  ports:
    - name: http
      port: 4010
      targetPort: 4010
      nodePort: 30120
    - name: grpc
      port: 40010
      targetPort: 40010
